# web5-rust

./: .Cargo.toml.swn  .Cargo.toml.swp  .gitignore  Cargo.toml
src/: .common.rs.swp  .crypto.rs.swp  .dids.rs.swp  .lib.rs.swp  agent.rs  common.rs  crypto.rs  dids.rs  dwn.rs  ed25519.rs  error.rs  lib.rs  server.rs  tests.rs
src/agent/: .json_rpc.rs.swm  commands.rs  compiler.rs  permission.rs  protocol.rs  scripts.rs  server.rs  structs.rs  traits.rs
src/common/: .convert.rs.swp  .error.rs.swp  .stores.rs.swp  .traits.rs.swp  cache.rs  cid.rs  convert.rs  database.rs  error.rs  level_store.rs  logger.rs  memory_store.rs  multicodec.rs  sqlite_store.rs  stores.rs  structs.rs  traits.rs  types.rs
src/crypto/: .common.rs.swp  .ed25519.rs.swo  .ed25519.rs.swp  .error.rs.swp  .key_generator.rs.swp  .local_key_manager.rs.swp  .secp256k1.rs.swp  .secp256r1.rs.swp  .traits.rs.swp  common.rs  ed25519.rs  error.rs  fschacha20poly1305.rs  jwk.rs  key_generator.rs  local_key_manager.rs  params_direct.rs  secp256k1.rs  secp256r1.rs  sha_2.rs  signer.rs  structs.rs  tests.rs  traits.rs
src/dids/: .bearer-did.rs.swp  .did_core.rs.swp  .did_dht.rs.swp  .dns_packet.rs.swo  .dns_packet.rs.swp  .error.rs.swp  .pkarr.rs.swp  .utils.rs.swp  bearer-did.rs  dht_document.rs  did.rs  did_core.rs  did_dht.rs  did_method.rs  did_resolution.rs  did_resolver.rs  dns_packet.rs  error.rs  multibase.rs  pkarr.rs  portable_did.rs  resolver_cache_level.rs  resolver_cache_noop.rs  signing.rs  structs.rs  tests.rs  traits.rs  universal_resolver.rs  utils.rs
src/dwn/: .permission.rs.swo  .protocol.rs.swn  .protocol.rs.swo  .records_write.rs.swo  agent.rs  client.rs  common.rs  compiler.rs  direct_messaging.rs  dm_client.rs  dwn.rs  dwn_client.rs  dwn_request.rs  dwn_server.rs  error.rs  index.rs  json_rpc.rs  jws-types.rs  permission.rs  private_agent.rs  private_client.rs  protocol.rs  public_client.rs  query-types.rs  records_write.rs  request_handler.rs  router.rs  server.rs  structs.rs  traits.rs  wallet.rs
unixfsv1/src/: file.rs  pb.rs
unixfsv1/src/file/: adder.rs
