[package]
name = "web5-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
jose-b64 = "0.1.2"
jose-jwk = "0.1.2"
leveldb-rs = "0.0.7"
regex = "1.10.4"
serde = "1.0.202"
serde_json = "1.0.117"
thiserror = "1.0.60"
varint-rs = "2.2.0"
rust-crypto = "0.2.36"
bs58 = "0.5.1"
k256 = {version="0.13.3", features=["arithmetic", "serde"]}
rand = "0.8.5"
p256 = {version="0.13.2", features=["serde"]}
z-base-32 = "0.1.4"
ed25519-dalek = {version="2.1.1", features=["serde", "rand_core", "alloc"]}
http = "1.1.0"
simple-dns = "0.7.0"
rustc-serialize = "0.3.25"
serde_bencode = "0.2.4"
url = { version = "2.5.0", features = ["serde"] }
reqwest = "0.12.4"
base64 = "0.22.1"
