[package]
name = "web5-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
jose-b64 = "0.1.2"
jose-jwk = "0.1.2"
leveldb-rs = "0.0.7"
regex = "1.10.4"
serde = "1.0.202"
serde_json = "1.0.117"
thiserror = "1.0.60"
varint-rs = "2.2.0"
rust-crypto = "0.2.36"
bs58 = "0.5.1"
k256 = {version="0.13.3", features=["arithmetic", "serde"]}
rand = "0.8.5"
p256 = {version="0.13.2", features=["arithmetic", "serde"]}
z-base-32 = "0.1.4"
ed25519-dalek = {version="2.1.1", features=["serde", "rand_core", "alloc"]}
http = "1.1.0"
simple-dns = "0.7.0"
rustc-serialize = "0.3.25"
serde_bencode = "0.2.4"
url = { version = "2.5.0", features = ["serde"] }
reqwest = "0.12.4"
base64 = "0.22.1"
quick-protobuf = "0.8.1"
rust-ipfs = "0.11.20"
libp2p-swarm = "0.44.2"
libipld-core = "0.16.0"
libipld = "0.14.0"
cid = "0.11.1"
multibase = "0.9.1"
multihash = "0.19.1"
multihash-codetable = {version="0.1.2", features=["sha2"]}
libipld-cbor = "0.16.0"
libipld-pb = "0.16.0"
unixfs-v1 = {path="./unixfsv1"}
serde_ipld_dagcbor = "0.6.1"
chrono = "0.4.38"
ecies = "0.2.7"
libsecp256k1-core = "0.3.0"
erased-serde = "0.4.5"
typetag = "0.2.16"
downcast-rs = "1.2.1"
jwtk = "0.3.0"
enum_dispatch = "0.3.13"
cast_trait_object = "0.1.3"
dyn-clone = "1.0.17"
