[package]
name = "web5-rust"
version = "2.0.0-beta11"
edition = "2021"
description = "A rust crate for interacting with Web5"
license = "BSD-3-Clause"
repository = "https://github.com/CalebCouch/web5-rust.git"

[dependencies]
hex = "0.4.3"
regex = "1.10.4"
serde = "1.0.202"
serde_json = { version = "1.0.117", features = ["raw_value"] }
thiserror = "1.0.60"
k256 = {version="0.13.3", features=["arithmetic", "serde"]}
rand = { version = "0.8.5", features = ["std", "std_rng"] }
p256 = {version="0.13.2", features=["arithmetic", "serde"]}
ed25519-dalek = {version="2.1.1", features=["serde", "rand_core", "alloc"]}
simple-dns = "0.7.0"
serde_bencode = "0.2.4"
url = { version = "2.5.0", features = ["serde"] }
reqwest = { version="0.11.23"}
base64 = "0.22.1"
chrono = { version="0.4.38", features = ["serde"] }
ecies = "0.2.7"
typetag = "0.2.16"
downcast-rs = "1.2.1"
cast_trait_object = "0.1.3"
dyn-clone = "1.0.17"
ulid = "1.1.2"
serde_with = "3.8.1"
num-traits = "0.2.19"
leveldb = {version="0.8.6", optional=true}
db-key = "0.0.5"
z-base-32 = "0.1.4"
rusqlite = "0.28.0"
jsonrpc-v2 = "0.13.0"
actix-web = "4.8.0"
async-trait = "0.1.81"
jsonrpc_client = {version="0.7.1", features = ["reqwest", "macros"]}
erased-serde = "0.4.5"
schemars = {version="0.8.21", features = ["either", "chrono", "uuid1"]}
tokio = { version = "1.39.2", features = ["sync", "macros"] }
jsonschema = "0.18.0"
rust-crypto = "0.2.36"
secp256k1 = {version = "0.29.0", features = ["global-context", "serde", "rand-std", "alloc", "rand"]}
bitcoin_hashes = {version = "0.14.0", features = ["schemars"]}
bitcoin = {version = "0.32.2", features = ["serde"]}
uuid = {version="1.10.0", features = ["v4", "v5", "serde"]}
either = {version="1.13.0", features = ["serde"]}
simple-database = {version = "1.2.1", features=["rusqlite"]}#{path="../simple-database"}
simple-crypto = "1.0.3" #{path="../simple-crypto"}
log = "0.4.22"
futures = "0.3.31"
itertools = "0.13.0"
snafu = { version = "0.8.5", features = ["backtrace"] }

[features]
default = ["agent"]
leveldb = ["dep:leveldb"]
agent = []
dwn = []
advanced = ["agent"]
